# deltica

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  DEPLOYMENT_QUICKSTART.md  DESKTOP_SETUP.md  Dockerfile  INSTALL_GUIDE.txt  INSTALL_GUIDE_DEV.txt  README_START.md  alembic.ini  analyze_cell_paragraphs.py  analyze_template.py  analyze_template_detailed.py  build_server_simple.py  check_department_in_labels.py  create_batch_template.py  debug_equipment_data.py  deltica-server.spec  deltica-start.bat  docker-compose.yml  package-lock.json  prepare_batch_template.py  pyproject.toml  start-backend.bat  start-desktop.bat  start-desktop.ps1  start.bat  start.ps1  test_batch_generation.py  test_batch_labels_output.docx  test_label_generation.py  test_label_output.docx  test_real_label.py  ЧТО_НА_ФЛЕШКУ.txt
.claude/: settings.local.json
backend/app/: models.py  schemas.py
backend/core/: config.py  database.py  logging_config.py  (+1 more)
build-scripts/: README.md  build-client.ps1  build-server.ps1  build-update.ps1
config/: README.md  users_config.yaml.example
deployment/: README.md  install_service.bat  run_migrations.bat  sync_users.bat  uninstall_service.bat
docker/: entrypoint.sh
docs/: ADMIN_GUIDE.md  CLIENT_INSTALL.md  DEPLOYMENT.md  README.md  UPDATE.md  USER_GUIDE.md  data_import_guide.md  deltica_architecture.md  deltica_description.md  deltica_dev_plan.md  import_data_guide.md
frontend/: README.md  TAURI_README.md  build-installer-admin.ps1  build-installer.ps1  index.html  package-lock.json  package.json  vite.config.js
migrations/: env.py
(+111 files in other folders)
