[project]
name = "deltica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.116.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "psycopg[binary]>=3.1.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.16.5",
    "pytest>=8.4.2",
    "python-dateutil>=2.9.0.post0",
    "python-jose[cryptography]>=3.5.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "psutil>=6.1.1",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "docxtpl>=0.20.1",
]
